--- a/app/src/main/res/layout/card_water_header.xml
+++ b/app/src/main/res/layout/card_water_header.xml
@@ -6,15 +6,21 @@
             android:orientation="vertical"
             android:padding="10dp">
 
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:weightSum="10">
+
             <com.craftapps.remotehorticulture.app.widgets.GaugeView
                 android:id="@+id/gaugeView"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:layout_alignBottom="@+id/textView_waterValue"
-                app:showScale="true"/>
+                app:showScale="true"
+                android:layout_weight="1" />
 
             <TextView
-                android:layout_width="250dp"
+                android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="0.00 %"
@@ -23,8 +29,9 @@
                 android:typeface="serif"
                 android:maxLines="1"
                 android:layout_weight="9"
-                android:gravity="center"
-                android:layout_alignParentTop="true"
-                android:layout_toEndOf="@+id/gaugeView" />
+                android:gravity="center"/>
+
+
+   </LinearLayout>
 
 </RelativeLayout>
