--- a/app/src/main/res/layout/fragment_lighting.xml
+++ b/app/src/main/res/layout/fragment_lighting.xml
@@ -4,74 +4,45 @@
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <TextView
-        android:layout_width="250dp"
-        android:layout_height="200dp"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/textView_latestLighting"
-        android:gravity="center"
-        android:textSize="55dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:paddingTop="30dp"
-        android:typeface="serif"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="11:12 AM - Wed June 25"
-        android:id="@+id/textView_latestLightingDate"
-        android:gravity="center"
-        android:typeface="serif"
-        android:layout_alignBottom="@+id/textView_latestLighting"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignLeft="@+id/textView_latestLighting"
-        android:layout_alignStart="@+id/textView_latestLighting" />
-
-    <com.androidplot.xy.XYPlot
-        android:id="@+id/lightingPlot"
         android:layout_width="fill_parent"
-        android:layout_height="250dp"
-        androidPlot.title="Lighting Level"
-        androidPlot.domainLabel="Domain"
-        androidPlot.rangeLabel="Range"
-        androidPlot.titleWidget.labelPaint.textSize="@dimen/title_font_size"
-        androidPlot.domainLabelWidget.labelPaint.textSize="@dimen/domain_label_font_size"
-        androidPlot.rangeLabelWidget.labelPaint.textSize="@dimen/range_label_font_size"
-        androidPlot.graphWidget.marginTop="20dp"
-        androidPlot.graphWidget.marginLeft="15dp"
-        androidPlot.graphWidget.marginBottom="25dp"
-        androidPlot.graphWidget.marginRight="10dp"
-        androidPlot.graphWidget.rangeLabelPaint.textSize="@dimen/range_tick_label_font_size"
-        androidPlot.graphWidget.rangeOriginLabelPaint.textSize="@dimen/range_tick_label_font_size"
-        androidPlot.graphWidget.domainLabelPaint.textSize="@dimen/domain_tick_label_font_size"
-        androidPlot.graphWidget.domainOriginLabelPaint.textSize="@dimen/domain_tick_label_font_size"
-        androidPlot.legendWidget.textPaint.textSize="@dimen/legend_text_font_size"
-        androidPlot.legendWidget.iconSizeMetrics.heightMetric.value="15dp"
-        androidPlot.legendWidget.iconSizeMetrics.widthMetric.value="15dp"
-        androidPlot.legendWidget.heightMetric.value="25dp"
-        androidPlot.legendWidget.positionMetrics.anchor="right_bottom"
-        androidPlot.graphWidget.gridLinePaint.color="#000000"
-        android:layout_alignParentLeft="true"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView_Date"
+        android:text=""
+        android:padding="16dp"
+        android:typeface="normal"
+        android:textSize="16dp" />
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/scrollView"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView_latestLighting"
-        android:paddingTop="30dp" />
+        android:layout_below="@+id/textView_Date">
 
-        <ToggleButton
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:background="@drawable/custom_switch"
-            android:text="New ToggleButton"
-            android:id="@+id/toggleButtonLighting"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:textOn=""
-            android:textOff=""
-            android:checked="false" />
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+
+            <it.gmariotti.cardslib.library.view.CardView
+                android:id="@+id/cardView_LightingData"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true" />
+
+            <it.gmariotti.cardslib.library.view.CardView
+                android:id="@+id/cardView_LightingSchedule"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/cardView_LightingData"
+                android:layout_alignParentStart="true" />
+
+            <it.gmariotti.cardslib.library.view.CardView
+                android:id="@+id/cardView_LightingWebView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/cardView_LightingSchedule"
+                android:layout_alignParentStart="true" />
+        </RelativeLayout>
+    </ScrollView>
 
 
 </RelativeLayout>
